got it to work. WITHOUT Layouting